# pennywise_danjo

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.dev.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/receipts/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/receipts/migrations/: 0001_initial.py
apps/receipts/services/: embedding.py  llm_adapter.py  storage.py
pennywise_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: upload_ingest.py
